fix: change overflow value to prevent scrollbar always being visible

--- a/packages/dotcom-ui-header/src/components/dropdown-navigation/dropdownNavigation.scss
+++ b/packages/dotcom-ui-header/src/components/dropdown-navigation/dropdownNavigation.scss
@@ -137,7 +137,7 @@
   border-bottom-right-radius: var(--o3-spacing-5xs);
   border: none;
   max-height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overscroll-behavior: none;
 }
 
